--- a/Estilos de RubénL/MainWindow.xaml
+++ b/Estilos de RubénL/MainWindow.xaml
@@ -6,7 +6,15 @@
         xmlns:local="clr-namespace:Estilos_de_RubénL"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <Window.Resources>
+        <Style TargetType="Window">
+            <Setter Property="WindowStyle" Value="None"/>
+            <Setter Property="ResizeMode" Value="NoResize"/>
+            <Setter Property="AllowsTransparency" Value="True"/>
+            <Setter Property="Background" Value="Transparent"/>
+        </Style>
+    </Window.Resources>
     <Border>
-        
+        <Image/>
     </Border>
 </Window>
